<resources>
    <string name="app_name">WalletLess</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="localization">Localization</string>
    <string name="about">About the application</string>
    <string name="lbl_select_language">Choose language</string>
    <string name="settings_localization_language_title">Language</string>
    <string name="en">English</string>
    <string name="mk">Macedonian</string>
    <string name="application_name">Application name</string>
    <string name="wallet_less">WalletLess</string>
    <string name="verison">1.0.0</string>
    <string name="version_date">Version date</string>
    <string name="version_date_value">21.4.2022</string>
    <string name="application_developer">Application developer</string>
    <string name="klementina_gjorgieva">Klementina Gjorgieva</string>
    <string name="text_new_request">Hello,\n feel free to request for new merchant</string>
    <string name="merchant_name">Merchant name here</string>
    <string name="merchant_description">Merchant description here</string>
    <string name="text_receive_email">We are gonna receive your message trough email</string>
    <string name="btn_send">Send</string>
    <string name="text_version">Version</string>
    <string name="no_internet">You need to connect to internet</string>
    <string name="btn_add_merchant">Add your merchant</string>
    <string name="search_here">Search here</string>
    <string name="home">Home</string>
    <string name="merchants">Merchants</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="delete_Card">Are you sure you want to delete this card?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>